# TA

./: .env  .gitignore  Dockerfile  LICENSE  README.md  call_json_to_md.py  project-tds-virtual-ta-promptfoo.yaml  pyproject.toml  requirements.txt  run.py  test_answer_engine.py  test_llm_call.py
app/api/: app.py
app/clean/: build_corpus.py  json_to_md.py
app/data/processed/: corpus.jsonl
app/data/raw/discourse/: topic_154675.json  topic_154683.json  topic_154705.json  topic_154707.json  topic_154719.json  topic_154724.json  topic_154904.json  topic_154959.json  topic_155021.json  topic_155082.json  topic_155218.json  topic_155248.json  topic_155263.json  topic_155264.json  topic_155315.json  topic_155322.json  topic_155326.json  topic_155327.json  topic_155332.json  topic_155382.json  topic_155487.json  topic_155550.json  topic_155574.json  topic_155619.json  topic_155693.json  topic_155708.json  topic_155751.json  topic_155846.json  topic_155848.json  topic_155872.json  topic_155904.json  topic_155939.json  topic_155940.json  topic_155977.json  topic_156001.json  topic_156015.json  topic_156020.json  topic_156050.json  topic_156119.json  topic_156141.json  (+220 more)
app/data/raw/discourse_md/: topic_154675.md  topic_154683.md  topic_154705.md  topic_154707.md  topic_154719.md  topic_154724.md  topic_154904.md  topic_154959.md  topic_155021.md  topic_155082.md  topic_155218.md  topic_155248.md  (+248 more)
app/engine/: answer_engine.py  embedder.py  llm.py  retriever.py  test_embedding_retriever.py
app/fetch/: discourse_scrapper.py  github_scrapper.py
app/utils/: image_utils.py
